# aliasing

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  miscellaneous.md
.github/workflows/: build-workflow.yml  build.yml  pypi-publish-workflow.yml
badges/: timestamp.txt
src/aliasing/: __init__.py  alias.py  core.py  error.py  example.py  virtual_alias.py
src/py_aliasing/: __init__.py  alias.py  error.py  example.py  virtual_alias.py
tests/: alias_test.py  aliased_test.py  method_alias_test.py  virtual_alias_test.py
