[project]
name = "aliasing"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    { name = "mxt", email = "mxnd.taylor@gmail.com" },
]
requires-python = ">=3.8"
readme = "README.md"

[project.license]
text = "MIT"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.black]
line-length = 79

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = [
    "**/example.py",
    "tests/*",
]

[tool.pdm.scripts]
examples = "python -m aliasing.example"
test = "pytest"
regression = "tox -e 'py38,py39,py310,py311,py312' --parallel"
fmt = "black {args:.}"
lint = "flake8 {args:src/}"

[tool.pdm.scripts.coverage]
composite = [
    "python -m coverage run -m pytest",
    "python -m coverage html",
]

[tool.pdm.scripts.ci_test]
composite = [
    "coverage",
    "regression",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.1",
    "black>=24.4.2",
    "coverage>=7.5.1",
    "tox>=4.15.0",
    "tox-pdm>=0.7.2",
    "genbadge[all]>=1.1.1",
    "flake8>=5.0.4",
]

[tool.coverage.run]
omit = [
    "tests/**",
    "*test*",
]
branch = true
